tests/bad/testfile-wrong-type-unop.go
package main

func main() { !3; }
